<resources>
    <string name="app_name">ЕГЭ helper</string>
    <string name="preference_file_key">ru.maximivanov.projects.ege_helper.PREFERENCES_FILE_KEY</string>
    <string name="heading">Выберите предметы, к которым хотите готовиться:</string>
    <string name="russian">Русский язык</string>
    <string name="english">Английский язык</string>
    <string name="math_profile">Математика (профиль)</string>
    <string name="informatics">Информатика</string>
    <string name="physics">Физика</string>
    <string name="chemistry">Химия</string>
    <string name="biology">Биология</string>
    <string name="social_studies">Обществознание</string>
    <string name="literature">Литература</string>
    <string name="geography">География</string>
    <string name="history">История</string>
    <string name="ready">Готово</string>
    <string name="sign_in">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Зарегистрироваться (coming soon)</string>
    <string name="notifications_settings">Настройки уведомлений (coming soon)</string>
    <string name="wrong_login_or_password">Неверный логин или пароль</string>
    <string name="main_page">Главная</string>
    <string name="ege_var">Варианты ЕГЭ</string>
    <string name="helper">helper</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Главная</string>
    <string name="test">Тесты</string>
    <string name="theory">Теория</string>
    <string name="statistic">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="coming_soon">Coming soon</string>
    <string name="improve_result">Улучшите свой результат</string>
    <string name="last_result">Последний результат</string>
    <string name="solved_no_variants">Вы пока что не решили ни одного варианта</string>
    <string name="answer">Ответ</string>
    <string name="finish">Завершить</string>
    <string name="loading">Загрузка...</string>
    <string name="test_results">Результаты теста</string>
    <string name="last_solved_tests">Последние решённые варианты</string>
    <string name="show_everything">Показать всё</string>
    <string name="your_answer">Ваш ответ</string>
    <string name="correct_answer">Правильный ответ</string>
    <string name="num">№</string>
    <string name="task_image">task image</string>
    <string name="solve_tasks">Решайте задания для получения персональных рекомендаций</string>
    <string name="path">https://m4xxx1m.github.io/tasks/</string>
    <string name="show_more">...\n\nПоказать ещё</string>
    <string name="user_is_initialized">User.isInitialized</string>
    <string name="dash">" - "</string>
    <string name="amount_html">/amount.html</string>
    <string name="slash">/</string>
    <string name="html">.html</string>
    <string name="png">.png</string>
    <string name="your_result">"Ваш результат: "</string>
    <string name="out_of">" из "</string>
    <string name="error">Ошибка</string>
    <string name="wipe_data">Стереть данные</string>
    <string name="data_wiped" type="id">Данные стёрты</string>
    <string name="about_title">О приложении</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="ok">Ок</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="about_text">Это тестовая версия приложения.\nНекоторые функции могут не работать или работать с ошибкой.\nНе реализована функция входа в систему и регистрации.\nНе во всех предметах есть задания.\nПри нахождении багов писать на почту mi4469228@yandex.ru</string>
    <string name="dialog_tag_wipe_data">Dialog: wipe data</string>
    <string name="dialog_tag_about">dialog: about</string>
</resources>