<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_margin="25dp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/russian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/russian"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/math_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/math_profile"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/informatics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/informatics"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/physics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/physics"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/chemistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/chemistry"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/biology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/biology"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/social_studies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/social_studies"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/literature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/literature"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/geography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/geography"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/history"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/english"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_ready"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="25dp"
            android:height="50dp"
            android:background="@drawable/button"
            android:text="@string/ready"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>