<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <Space
        android:layout_height="25dp"
        android:layout_width="match_parent">
    </Space>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="20dp">
        </Space>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/heading">
        </TextView>
        <Space
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:minWidth="20dp">
        </Space>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="26dp">
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent">
        </Space>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian"
            android:textColor="@android:color/black"
            android:textSize="14sp">
        </CheckBox>
        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:text="@string/russian"
            android:textSize="14sp">
        </TextView>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent">
        </Space>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math_base"
            android:textColor="@android:color/black"
            android:textSize="14sp">
        </CheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent">
        </Space>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math_profile"
            android:textColor="@android:color/black"
            android:textSize="14sp">
        </CheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent">
        </Space>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informatics"
            android:textColor="@android:color/black"
            android:textSize="14sp">
        </CheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent">
        </Space>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physics"
            android:textColor="@android:color/black"
            android:textSize="14sp">
        </CheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent">
        </Space>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chemistry"
            android:textColor="@android:color/black"
            android:textSize="14sp">
        </CheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent">
        </Space>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biology"
            android:textColor="@android:color/black"
            android:textSize="14sp">
        </CheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent">
        </Space>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_studies"
            android:textColor="@android:color/black"
            android:textSize="14sp">
        </CheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent">
        </Space>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/literature"
            android:textColor="@android:color/black"
            android:textSize="14sp">
        </CheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent">
        </Space>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geography"
            android:textColor="@android:color/black"
            android:textSize="14sp">
        </CheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent">
        </Space>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textColor="@android:color/black"
            android:textSize="14sp">
        </CheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:minHeight="40dp">
        </Space>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:minHeight="30dp"
            android:layout_weight="0.2">
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                tools:ignore="NestedWeights">
            </Space>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:height="50dp"
                android:background="@drawable/button"
                android:text="@string/ready"
                android:textColor="@color/white">
            </Button>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1">
            </Space>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>