<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="13dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:id="@+id/sign_up_button"
                android:clickable="true"
                android:focusable="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="13dp"
                android:background="#20000000" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="15dp"
                android:text="@string/wipe_data"
                android:id="@+id/wipe_data_button"
                android:clickable="true"
                android:focusable="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="13dp"
                android:background="#20000000" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="15dp"
                android:text="@string/about_title"
                android:id="@+id/about_button"
                android:clickable="true"
                android:focusable="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="13dp"
                android:background="#20000000" />
        </LinearLayout>
    </ScrollView>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/footer"
        android:name="ru.maximivanov.ege_helper.FooterFragment"
        tools:layout="@layout/footer_fragment" />
</RelativeLayout>
